--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Web"
+name="index"
 platform="Web"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/1bit_html_export/1bitgame.html"
+export_path="../../GameJamHTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
